# tripleten_assignment

./: Makefile  README.md  data_models.py  pyproject.toml  research.ipynb
configs/: configs.py  examples_for_prompt.py  prompts.py
data/: examples_test.py  validation_dataset.json
results/: assessment_criteria.csv  validation_results.csv
src/: assessor.py  helpers.py  parser.py
